Overhaul Plugin for Embedded Artistry Needs
This commit contains a number of changs that make this plugin useful for Embedded Artistry's purposes. Changes include:

- Removing the _ directory prefix
- Supporting additional post types (courses, lessons, newsletters, field atlas entries, glossary entries), including specific file organization schemes for each type
- Set the user to the configured user in the import/export paths
    + This addresses a problem we had where the initial export would differ from the import/export from GitHub and Wordpress. By setting the same user, we resolved the problems the difference in user permissions incurred
- Modified commit messages to our preferred format
- Removed option to delete posts on import (should happen from wordpress front-end)
- Removing the ability to file new posts by adding a file in GitHub (expected workflow is to go through the website to create posts)
- Removed support for drafts and images
- Disabled the "Edit" link taking you to GitHub - we need the Wordpress front-end for our custom post types and their metadata

In addition, other cleanup was performed:

- Update version to 1.2
- Adjusted some details from litefeel->embeddedartistry
- Refactoring filename/directory logic in post.php
- Removing commented out code
- Adding error log statements for different failure conditions so that we have transparency when an import or export fails
- Ignore composer.lock file, since it's generated during the plugin setup process
- Removed function in CLI causing an error - app->export->set_user() referenced an unused option name
    + Instead, this CLI path calls the wordpress set user functionality

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-  "name": "litefeel/writing-on-github",
-  "description": "A WordPress plugin to allow you writing on GitHub (or Jekyll site).",
+  "name": "embeddedartistry/writing-on-github",
+  "description": "A WordPress plugin to support synchronization between Embedded Artistry Wordpress and GitHub.",
   "type": "wordpress-plugin",
   "minimum-stability": "stable",
   "license": "GPL",
   "authors": [
     {
-      "name": "litefeel",
-      "email": "litefeel@gmail.com"
+      "name": "embeddedartistry",
+      "email": "contact@embeddedartistry.com"
     }
   ],
   "autoload": {
